fix: create-buttons aligned to the left

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,11 +6,14 @@ body{
     background-color: #f3f2f6;
     font-family: 'Open Sans','Ubuntu', 'Lato', 'Lora', 'Goudy Old Style', sans-serif;
     color: #333;
-    margin: 0;
     padding: 0;
+    margin: 0;
 }
 h1{
     font-size: 2em;
     font-weight: bold;
     color: #000;
+}
+main{
+    margin: 30px;
 }
